--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/7ad2cc9ddb.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body
+class="relative">
   <app-root></app-root>
 </body>
 </html>
